--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-dom": "^16.9.0",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
-    "react-scrollspy": "^3.4.0",
+    "react-router-hash-link": "^1.2.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
